--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,38 +1,45 @@
-.App {
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title {
+  color: white;
+  margin: 2em 0;
+  color: rgb(158, 109, 221);
+}
+
+.chewy {
+  width: fit-content;
+  max-width: 300px;
+  border-radius: 2em;
+  border: 2px solid rgb(158, 109, 221);
+  box-shadow: 0px 0px 20px rgba(158, 109, 221, 0.383);
+}
+
+.chewy-response {
+  color: white;
+  font-size: 1.5rem;
+  width: fit-content;
+  max-width: 200px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background: rgb(98, 47, 165);
+  border: none;
+  border-top: 2px solid rgba(255, 255, 255, 0.212);
+  outline: none;
+  padding: 1.5em 2em;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 }
