--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,7 @@
 
 .title {
   color: white;
-  margin: 2em 0;
+  margin: 1.25em 0 1em 0;
   color: rgb(158, 109, 221);
 }
 
@@ -23,7 +23,7 @@
   color: white;
   font-size: 1.5rem;
   width: fit-content;
-  max-width: 200px;
+  max-width: 300px;
   text-align: center;
 }
 
